Creado mediante Colaboratory

--- a/Houses Prices.ipynb
+++ b/Houses Prices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled23.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPTC44mmXTI1u5NsWPY5WDZ",
+      "authorship_tag": "ABX9TyMqyJx/PUtwlJiS3j/Df5fn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 40,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -60,7 +60,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 246
         },
-        "outputId": "bc8d3782-c863-42e4-8d02-d00b6361b2bd"
+        "outputId": "8dbd94c1-f3a6-4836-d646-d12971e71999"
       },
       "source": [
         "# Importar dataset\n",
@@ -69,7 +69,7 @@
         "\n",
         "train_dataset.head()"
       ],
-      "execution_count": 47,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -616,7 +616,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 9
         }
       ]
     },
@@ -629,7 +629,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 647
         },
-        "outputId": "81bfce86-4b51-41bd-b551-6c6180bf1e4d"
+        "outputId": "91fdc662-1e83-4046-ce47-d690d4916447"
       },
       "source": [
         "# Verificar datos nulos\n",
@@ -643,7 +643,7 @@
         "\n",
         "datos_faltantes.head(20)"
       ],
-      "execution_count": 45,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -803,7 +803,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 10
         }
       ]
     },
@@ -816,13 +816,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "11790f3d-0952-4ca3-fadc-242d83bb2251"
+        "outputId": "b4881e1b-433d-4c75-80f7-6ae4484172f3"
       },
       "source": [
+        "# Descartar columnas con datos faltantes\n",
+        "\n",
         "train_dataset.drop((datos_faltantes[datos_faltantes[\"Total nulos\"]>0]).index, axis = 1, inplace = True)\n",
         "train_dataset.isnull().sum().max()"
       ],
-      "execution_count": 48,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -834,7 +836,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 11
         }
       ]
     },
@@ -848,10 +850,10 @@
       "source": [
         "# Dividir conjunto de entrenamiento\n",
         "\n",
-        "X = train_dataset.iloc[:,:-1]\n",
-        "y = train_dataset.iloc[:,-1]"
+        "X_train = train_dataset.iloc[:,:-1]\n",
+        "y_train = train_dataset.iloc[:,-1]"
       ],
-      "execution_count": 3,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -862,10 +864,41 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# Tratar datos categóricos\n",
+        "\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "\n",
+        "encoder = OneHotEncoder()\n",
+        "X_train = encoder.fit(X_train)"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cxH8254qcZCs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "7cb746f3-e2dd-4a2c-b215-23be7e620d9b"
+      },
+      "source": [
+        "print(X_train)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "OneHotEncoder(categories='auto', drop=None, dtype=<class 'numpy.float64'>,\n",
+            "              handle_unknown='error', sparse=True)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
